--- a/SSD_Backend-master/package.json
+++ b/SSD_Backend-master/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "fs-extra": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1"
   },
